[gd_scene load_steps=11 format=2]

[ext_resource path="res://Project 01/Ice Comet.png" type="Texture" id=1]
[ext_resource path="res://Additional/HitBoxes.tscn" type="PackedScene" id=2]
[ext_resource path="res://Object/Supplement/PlasmaBullet.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 2.0

[sub_resource type="CircleShape2D" id=8]
radius = 6.0

[node name="PlasmaBullet" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, -1 )
shape = SubResource( 14 )

[node name="HitBoxes" parent="." instance=ExtResource( 2 )]
position = Vector2( 3, -1 )
collision_layer = 8
collision_mask = 21
damage = 10

[node name="CollisionShape2D" parent="HitBoxes" index="0"]
shape = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
[connection signal="area_entered" from="HitBoxes" to="." method="_on_HitBoxes_area_entered"]
[connection signal="body_entered" from="HitBoxes" to="." method="_on_HitBoxes_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="HitBoxes"]
